--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ server.tomcat.accesslog.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://dpg-chqfbkik728ivvtc97k0-a.oregon-postgres.render.com/database_ncu9
-spring.datasource.username=database_ncu9_user
-spring.datasource.password=x1CLtCAJDyEZk7EyQcjkq3KV6qvDr0Tv
+spring.datasource.url=jdbc:postgresql://dpg-ci1p0u67avj9m8b8vm5g-a.oregon-postgres.render.com/database_mlji
+spring.datasource.username=database_mlji_user
+spring.datasource.password=MEv8oypUV9XQxn2yez6GwiMH9lDU6ngJ
